[fix]card wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,12 +22,6 @@
   position: absolute;
 }
 
-.position-fixed {
-  position: fixed;
-  top: 0;
-  left: 0px;
-}
-
 main {
   padding-top: 100px;
 }
@@ -43,12 +37,12 @@ main {
 .row {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
 }
 
-.col {
+.card {
   border: 1px solid black;
-  width: calc(100%/3 - 20px);
+  width: calc(100%/3 - 20px / 3);
   height: 550px;
 }
 
